--- a/main.css
+++ b/main.css
@@ -113,11 +113,12 @@ header{
 
 .nav-list{
     list-style: none;
-    width: 100%;
+    width: 50%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 30em;
 }
 
 .top-nav .nav-list li:hover, .top-nav .nav-list li:focus{
@@ -138,7 +139,7 @@ li{
 }
 
 .nav-link{
-    font-family: 'Kaufmann BT',sans-serif;
+    font-family: 'The Historia Demo',sans-serif;
     font-size: 5rem;
     padding: 1rem;
 }
@@ -212,14 +213,14 @@ li{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 100%;
+    width: 50%;
     text-align: center;
     z-index: 1;
 }
 
 .landing-text h1{
     font-size: 20rem;
-    font-family: 'Kaufmann BT',sans-serif;
+    font-family: 'The Historia Demo',sans-serif;
     background: linear-gradient(to top, #ffe838,#fd57bf);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -260,6 +261,7 @@ li{
 .profile-img{
     flex: 1;
     margin-left: 5rem;
+    border: none;
 }
 
 .about-details{
@@ -336,6 +338,17 @@ li{
     align-items: center;
     justify-content: center;
     margin-bottom: 5rem;
+    margin-top: 20vh;
+}
+
+.portfolio-img{
+    height: 15vh;
+    width: 30em;
+}
+
+.design{
+    margin-top: -15vh;
+    margin-left: 5em;
 }
 
 .portfolio-item:last-child{
