--- a/main.css
+++ b/main.css
@@ -134,7 +134,7 @@ header{
 }
 
 li{
-    margin: 0 2rem;
+    margin: 0 2em;
 }
 
 .nav-link{
@@ -338,6 +338,13 @@ li{
     margin-bottom: 5rem;
 }
 
+.portfolio-img{
+    height: auto;
+    width: auto;
+    margin: 0;
+    display: inline-block;
+}
+
 .portfolio-item:last-child{
     margin-bottom: 0;
 }
@@ -345,6 +352,14 @@ li{
 .profile-img{
     width: 50rem;
     flex: 1;
+}
+
+.img-2{
+    margin-left: 8em;
+}
+
+.desc-2{
+    margin-right: -10em;
 }
 
 .portfolio-description{
@@ -383,6 +398,7 @@ li{
     border-radius: .8rem;
     background-color: rgba(0,0,0,0.05);
     margin: 0 auto;
+    margin-left: 25em;
     position: relative;
     padding: 5rem;
     list-style: none;
