--- a/main.css
+++ b/main.css
@@ -399,7 +399,7 @@ li{
     background-color: rgba(0,0,0,0.05);
     margin: 0 auto;
     margin-left: auto;
-    position: relative;
+    position: absolute;
     padding: 5rem;
     list-style: none;
     text-align: left;
